eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/DocuGen_Template__c.object
<CustomObject>
    <fields>
        <fullName>Att_done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attachments have been processed</description>
        <label>Att_done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_to_customers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available to customers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_FIS_Placeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is FIS Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Risk_Placeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Risk Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_id__c</fullName>
        <description>Old Conga template id</description>
        <label>Old_id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Group__c</fullName>
        <label>Template Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>DocuGen Template</label>
    <listViews>
        <fullName>Active_Templates</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Available_to_customers__c</columns>
        <columns>Template_Group__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Available_to_customers__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Template_Group__c</field>
            <operation>notEqual</operation>
            <value>Archive</value>
        </filters>
        <label>Active Templates</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <columns>Available_to_customers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Archived_Templates</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>equals</operation>
            <value>Archive</value>
        </filters>
        <label>Archived Templates</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CAA_Rebuild_Documents</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Available_to_customers__c</columns>
        <columns>Template_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>contains</operation>
            <value>CAA</value>
        </filters>
        <label>CAA Rebuild Documents</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Collections_Letters</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Available_to_customers__c</columns>
        <columns>Template_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>contains</operation>
            <value>Collections</value>
        </filters>
        <label>Collections Letters</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Complaints</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <columns>Available_to_customers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>contains</operation>
            <value>Complaint</value>
        </filters>
        <label>Complaints</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CustomerContact</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <columns>Available_to_customers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>contains</operation>
            <value>Contact</value>
        </filters>
        <label>Customer Contact</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Decline_Letters</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <columns>Available_to_customers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Name__c</field>
            <operation>contains</operation>
            <value>Decline</value>
        </filters>
        <label>Decline Letters</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FCU_Letters</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>contains</operation>
            <value>FCU</value>
        </filters>
        <label>FCU Letters</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FIS_FQS_documents_for_quotation</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <columns>Available_to_customers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>equals</operation>
            <value>FIS</value>
        </filters>
        <label>FIS/FQS documents for quotation</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HPP_BTL_HPPP_Offer_Letter_Templates</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <columns>Available_to_customers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>equals</operation>
            <value>Offer</value>
        </filters>
        <label>HPP/BTL/HPPP Offer Letter Templates</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HPP_BTL_HPS_HPPP_Application_Form</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <columns>Available_to_customers__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Name__c</field>
            <operation>contains</operation>
            <value>Application</value>
        </filters>
        <filters>
            <field>Available_to_customers__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Template_Group__c</field>
            <operation>equals</operation>
            <value>MMR</value>
        </filters>
        <label>HPP/BTL/HPS/HPPP  Application Form</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HPP_BTL_HPS_HPPP_Welcome_Letters</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <columns>Available_to_customers__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>equals</operation>
            <value>Welcome</value>
        </filters>
        <label>HPP/BTL/HPS/HPPP  Welcome Letters</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HPP_MMR_Documents</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <columns>Available_to_customers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>equals</operation>
            <value>MMR</value>
        </filters>
        <label>HPP MMR Documents</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HPS_Offer_Letter_Templates</fullName>
        <columns>NAME</columns>
        <columns>Template_Name__c</columns>
        <columns>Template_Group__c</columns>
        <columns>Available_to_customers__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Group__c</field>
            <operation>equals</operation>
            <value>HPSOffer</value>
        </filters>
        <label>HPS Offer Letter Templates</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>DocT-{0000}</displayFormat>
        <label>DocuGen Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuGen Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>